--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -8,35 +8,46 @@
     	 <script src="calc.js"></script>
 	</head>
 	<body>
-	  <!-- TODO: 1] Create an add, division, subtraction and subtraction function -->
+	  <!-- TODO: 1] CRreate a history function and append the calculations to the list ul html. -->
 	  <header>
-	  	<h1 class="heading">ES6 Calculator Challenge</h1>
+	  	<h1 class="heading">EE81 Calculator</h1>
 	  </header>
 	  <main>  
-		<div class="box">
-			<div class="display"><input type="text" class="padding" readonly size="18" id="d" value="0"></div>
-			<div class="keys">
-			    <p><input type="button" class="button gray" value="mrc" onclick='c("Created....................")'>
-			    <input type="button" class="button gray" value="m-" onclick=''>
-			    <input type="button" class="button gray" value="m+" onclick=''>
-			    <input type="button" class="button pink" value="/" onclick=''></p>
-			    <p><input type="button" class="button black" value="7" onclick=''>
-			    <input type="button" class="button black" value="8" onclick=''>
-			    <input type="button" class="button black" value="9" onclick=''>
-			    <input type="button" class="button pink" value="*" onclick=''></p>
-			    <p><input type="button" class="button black" value="4" onclick=''>
-			    <input type="button" class="button black" value="5" onclick=''>
-			    <input type="button" class="button black" value="6" onclick=''>
-			    <input type="button" class="button pink" value="-" onclick=''></p>
-			    <p><input type="button" class="button black" value="1" onclick=''>
-			    <input type="button" class="button black" value="2" onclick=''>
-			    <input type="button" class="button black" value="3" onclick=''>
-			    <input type="button" class="button pink" value="+" onclick=''></p>
-			    <p><input type="button" class="button black" value="0" onclick=''>
-			    <input type="button" class="button black" value="." onclick=''>
-			    <input type="button" class="button black" value="C" onclick=''>
-			    <input type="button" class="button orange" value="=" onclick=''></p>
-			</div>
+
+	  	<!-- NEW CALC START -->
+
+		<div class="wrap">
+		    <div class="cal">
+		        <span class="title">Calculator</span>
+		        <div class="screen"><input type="text" class="padding screen" readonly id="d" value="0"></div>
+		        <ul class="buttons">
+		            <li><a class="clear" href="c">C</a></li>
+		            <li><a class="val" href="-">&plusmn;</a></li>
+		            <li><input type="button" class="val" value="/" onclick=''></li>
+		            <li><input type="button" class="val" value="*" onclick=''></li>
+		            <li><input type="button" class="val" value="7" onclick=''></li>
+		            <li><input type="button" class="val" value="8" onclick=''></li>
+		            <li><input type="button" class="val" value="9" onclick=''></li>
+		            <li><input type="button" class="val" value="-" onclick=''></li>
+		            <li><input type="button" class="val" value="4" onclick=''></li>
+		            <li><input type="button" class="val" value="5" onclick=''></li>
+		            <li><input type="button" class="val" value="6" onclick=''></li>
+		            <li><input type="button" class="val" value="+" onclick=''></li>
+		            <li><input type="button" class="val" value="1" onclick=''></li>
+		            <li><input type="button" class="val" value="2" onclick=''></li>
+		            <li><input type="button" class="val" value="3" onclick=''></li>
+		            <li><input type="button" class="val" value="=" onclick=''></li>
+		            <li><input type="button" class="val" value="0" onclick=''></li>
+		            <li><input type="button" class="val" value="." onclick=''></li>
+		        </ul>
+		    </div>
+		    
+		    <div class="history">
+		        <span class="clear_his">Clear</span>
+		        <ul class="list"></ul>
+		    </div>
 		</div>
 	  </main>	
-	</b
+	</body>
+</html>
+
