--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -12,7 +12,7 @@
 	  	<h1 class="heading">ES6 Calculator Challenge</h1>
 	  </header>
 	  <main>  
-	  	<!-- 2.] IMPORT THE JAVASCRIPT OBJECT AND USE IT IN THE KEYS SECTION BELOW. -->
+	  	<!-- 2.] IMPORT THE JAVASCRIPT OBJECT AND USE IT IN THE KEYS SECTION BELOW AND REFER TO IT IN YOUR ON CLICK METHODS. USE CHROME TOOLS TO HELP YOU FIGURE OUT HOW TO REFERENCE THE OBJECT -->
 		<div class="box">
 			<div class="display"><input type="text" class="padding" readonly size="18" id="display" value=""></div>
 			<div class="keys">
