--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -7,6 +7,9 @@
 	</head>
 	<body>
 		
-		<!-- TODO: 1] ADD A Module for ES6 and decalre a function called es6 -->
+		<!-- TODO: 1] ADD A Module for ES6 and decalre a function called es6
+		Create a local variable called test and assign it a string of your choice.
+		use the console.log to print out the variable. Finally, call the es6 function below it so it gets invoked,
+		you may alternatively define an immediate invoking function as well -->
 	</body>
 </html>
