--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -5,14 +5,17 @@
 		 <link rel="stylesheet" type="text/css" href="calc.css">
 		 <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
     	 <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script>
-    	 <script src="./calc.js"></script>
+    	 <!-- TODO: 1] Import the calculator object as "calculator" and store it to the window object so you can reference it later. -->
+    	 <script type="module">
+			 
+		 </script>	
 	</head>
 	<body>
 	  <header>
 	  	<h1 class="heading">ES6 Calculator Challenge</h1>
 	  </header>
 	  <main>  
-	  	<!-- 2.] IMPORT THE JAVASCRIPT OBJECT AND USE IT IN THE KEYS SECTION BELOW AND REFER TO IT IN YOUR ON CLICK METHODS. USE CHROME TOOLS TO HELP YOU FIGURE OUT HOW TO REFERENCE THE OBJECT -->
+	  	<!-- 2.] CALL THE COMPUTER, CLEAR FUNCTIONS RESPECTIVELY, REMEMBER THAT THE OBJECT SHOULD BE STORED TO THE WINDOW TO AVOID SCOPE ISSUES. -->
 		<div class="box">
 			<div class="display"><input type="text" class="padding" readonly size="18" id="display" value=""></div>
 			<div class="keys">
